--- a/src/templates/index.mustache
+++ b/src/templates/index.mustache
@@ -1,1 +1,20 @@
-Hello, {{person}}!
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Wedding</title>
+
+<style type="text/css" media="all">
+@import "css/wedding.css";
+</style>
+
+</head>
+
+<body>
+        <div class="wrap">
+             <div class="main">
+                  Under construction, check back soon!
+             </div>
+        </div>
+</body>
+
+</html>
